hphp/hack/test/typecheck/nameof/parsing/nameof_method_caller.php.exp
File "nameof_method_caller.php", line 5, characters 12-36:
`nameof` can only be used with a class (Parsing[1002])
