hphp/hack/test/typecheck/nameof/parsing/nameof_method_caller.php
<?hh

class C {
  public static function f(): void {
    nameof meth_caller("Foo", "bar");
  }
}
